fb-mainnet/forcebridge-mainnet-bsc/forcebridge-ui/force-bridge-ui-ingress-mainnet.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  namespace: michi
  annotations:
    kubernetes.io/ingress.class: "nginx"
    
  name: ingress-force-bridge-ui-mainnet-bsc
spec:
  rules:
  - host: bsc.forcebridge.com
    http:
      paths:
      - path: /
        backend:
          serviceName: service-force-bridge-ui-mainnet-bsc
          servicePort: 80
